[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/puhuiti-rgular-40.tres" type="DynamicFont" id=1]
[ext_resource path="res://ready_scene/coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/sounds/sound.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ta_fang_mode/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://scenes/sounds/sound.gd" type="Script" id=5]
[ext_resource path="res://scripts/TaFangMode/Title.gd" type="Script" id=6]
[ext_resource path="res://images/eden720p.png" type="Texture" id=7]
[ext_resource path="res://sounds/bgm/ark_nights_life_flow.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/UI/present-gift-box-reward-full.png" type="Texture" id=9]

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath("coin")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 100 ],
"method": "save_coin"
} ]
}

[node name="TaFang" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 562.549, 49.2621 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 9 )

[node name="bian_dui" type="Button" parent="."]
margin_left = 835.471
margin_top = 238.645
margin_right = 952.471
margin_bottom = 293.645
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "编队"

[node name="ta_ku" type="Button" parent="."]
margin_left = 960.471
margin_top = 238.645
margin_right = 1091.47
margin_bottom = 293.645
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "干员"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 689.0
margin_top = 189.0
margin_right = 945.0
margin_bottom = 244.0

[node name="sound" parent="." instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="BgmTitle" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 8 )
autoplay = true

[node name="start" type="Button" parent="."]
margin_left = 835.471
margin_top = 149.262
margin_right = 1091.47
margin_bottom = 219.262
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "作战"

[node name="sign" type="Button" parent="."]
margin_left = 532.052
margin_top = 20.0
margin_right = 688.052
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "每日签到"

[node name="task" type="Button" parent="."]
margin_left = 835.471
margin_top = 398.14
margin_right = 952.471
margin_bottom = 453.14
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "任务"

[node name="tu_jian" type="Button" parent="."]
margin_left = 270.0
margin_top = 20.2819
margin_right = 348.0
margin_bottom = 75.2819
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "图鉴"

[node name="store" type="Button" parent="."]
margin_left = 960.471
margin_top = 398.14
margin_right = 1094.47
margin_bottom = 453.14
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "仓库"

[node name="buy" type="Button" parent="."]
margin_left = 835.471
margin_top = 309.915
margin_right = 952.471
margin_bottom = 364.915
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "采购"

[node name="invite" type="Button" parent="."]
margin_left = 960.471
margin_top = 309.915
margin_right = 1116.47
margin_bottom = 364.915
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "公开招募"

[node name="to_game_title" type="Button" parent="."]
margin_left = 1014.37
margin_top = 640.415
margin_right = 1248.37
margin_bottom = 699.415
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "回到总主界面"

[node name="story" type="Button" parent="."]
margin_left = 358.388
margin_top = 20.2819
margin_right = 514.388
margin_bottom = 75.2819
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "背景故事"

[node name="coin" parent="." instance=ExtResource( 2 )]
position = Vector2( 835.68, 67.1295 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_gift = SubResource( 3 )

[connection signal="pressed" from="bian_dui" to="." method="_on_bian_dui_pressed"]
[connection signal="pressed" from="ta_ku" to="." method="_on_ta_ku_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="sign" to="." method="_on_sign_pressed"]
[connection signal="pressed" from="task" to="." method="_on_task_pressed"]
[connection signal="pressed" from="tu_jian" to="." method="_on_tu_jian_pressed"]
[connection signal="pressed" from="buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="to_game_title" to="." method="_on_to_game_title_pressed"]
[connection signal="pressed" from="story" to="." method="_on_story_pressed"]

[editable path="sound"]
